Fix toast message wrapping to multiple lines on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -192,3 +192,8 @@ html[data-theme="light"] .pot-size-selected::placeholder {
     overflow-wrap: anywhere;
     word-break: break-word;;
 }
+
+/* Fix text wrapping to multiple lines on mobile */
+.toast {
+    @apply min-w-max;
+}
